--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ email:              lamyaamghar@gmail.com
 description:        explaining with ease the tech concepts 
 author:             Lamya Amghar
 baseurl:            "/"
-url:                "https://Alpha.github.io"
+url:                "https:/tech-data.github.io"
 
 # Social Profiles
 twitter_username:   
