--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title:              Alpha Blog
 email:              lamyaamghar@gmail.com
-description:        
+description:        " "
 author:             Lamya Amghar
 baseurl:            ""
 url:                "https:/tech-data.github.io"
